add cat column and script for conversation.

--- a/index.html
+++ b/index.html
@@ -10,16 +10,26 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Democrats vs. Republicans</h1>
+        <h1>Hero Dog vs. Evil Cat</h1>
+        <h3>Click the button below to help the hero dog scare off the evil cat!</h3>
+        <button class="btn btn-primary" id="bark">RUFF RUFF!</button>
       </div>
       <div class="row">
         <div class="col-md-6">
-          <h2>Make the dog bark at the evil cat!</h2>
-          <button class="btn btn-primary" id="bark">RUFF RUFF!</button>
+          <h2>Hero Dog barks at the evil cat!</h2>
           <img src="img/barkingdog.jfif" alt="A barking dog.">
           <ul id="dogBark">
 
           </ul>
+        </div>
+        <div class="col-md-6">
+          <h2>Evil Cat strikes back!</h2>
+          <img src="img/hissingcat.jfif" alt="A hissing cat.">
+          <ul id="catHiss">
+
+          </ul>
+        </div>>
+
         </div>
       </div>
     </div>
