add final button to pop up image and styling.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,17 @@
           <ul id="catHiss">
 
           </ul>
-        </div>>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lrg-12">
+          <div class ="centered-Paragraph">
+            <h2 >Click this button once the evil cat has been scared off!</h2>
+            <button class="btn btn-primary" id="goodBoy">WHO's a Good BOY?</button>
+            <ul id="CatIsGone">
 
+            </ul>
+          </div>
         </div>
       </div>
     </div>
